--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -6,6 +6,7 @@ $light-purple: #5243ad;
 $light-bg: hsl(273, 34%, 83%);
 $lighter-bg: #fde5e5;
 $white: #ffffff;
+$lightest-bg: rgba(255, 255, 255, 0.7);
 $std-border: 6.71px;
 .grid {
 	display: grid;
